# delta-assessment

./: README.md  last_update.py  last_update.sql  pyproject.toml  test_last_update.py
